--- a/ReadMe
+++ b/ReadMe
@@ -1,7 +1,7 @@
 #Datacamp Learning Notes
 
 A structured collection of notes, code snippets, and mini-projects from my DataCamp learning journey.  
-Focused on **Python**, **Machine Learning**, and **Analytics** with applications in **reservoir engineering** and **energy systems**.
+Focused on Python, Machine Learning, and Analytics with applications in Reservoir Engineering and Energy systems.
 
 
 📚 Purpose
